Revert "Patched Chrome horizontal scrolling issue with arrow keys and iPhone hero rendering."
This reverts commit e300717f6ffdd7970c15efd4ddda059620bae938.

--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,6 @@ img, iframe { animation: render 1.6s ease-in-out infinite; }
 video {
 	width: 100vw;
 	height: 100vh;
-	height: 100dvh;
 	opacity: 0.64;
 	display: block;
 	object-fit: cover;
@@ -75,7 +74,6 @@ video {
 	width: auto;
 	margin: auto;
 	height: 100vh;
-	height: 100dvh;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
@@ -182,7 +180,6 @@ video {
 		max-width: 21.66em;
 		display: inline-block;
 		vertical-align: middle;
-		scroll-snap-stop: always;
 		scroll-snap-align: start;
 		& img {
 			float: left;
